<?xml version="1.0"?>
<package>
  <name>aimmo_rviz_plugins</name>
  <version>1.0.0</version>
  <description>RViz plugins for the AIMMO.</description>

  <maintainer email="kyeom@aimmo.co.kr">Chung-Kyeom, Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libogre-dev</build_depend>
  <run_depend>libogre-dev</run_depend>
  
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>pcl_msgs</build_depend>
  <run_depend>pcl_msgs</run_depend>

  <build_depend>qtbase5-dev</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
